--- a/markdowns/1_목차.md
+++ b/markdowns/1_목차.md
@@ -52,3 +52,58 @@ object는 다른말로 인스턴스.
 클래스 안에 있는 함수는 method라고 부르기도 함.
 
 # constructor
+```java
+class Friend {
+  String name = "kim";
+  int age = 20;
+} 
+```
+
+이런 클래스가 있음.
+근데 저 이름에 kim이 아니라 park넣고 싶음..
+그럼 어떡함? Friend2를 만들면 되긴 하겠지만, 너무 비효율적.
+
+그래서 constructor 문법을 쓸거임.
+
+constructor를 쓰면 new Friend를 할 때마다 다른 값을 줄 수 있음.
+
+## 만들기
+```java
+class Friend {
+  String name;
+  int age = 20;
+  Friend(String name){
+     this.name = name; 
+  }
+} 
+```
+
+클래스안에 클래스이름이랑 똑같은 함수를 넣으면 스페셜한 함수가 됨.
+
+이 스페셜한 함수는 신기하게 this를 쓸 수 있음.
+Friend함수 인자(String name)에 name을 넣고,<br>
+그 name을 this.name에 주면 이제 "String name"에 이름이 들어감.
+
+# 선언 및 출력
+```java
+public static void main(String[] args) {
+		SpringApplication.run(ShopApplication.class, args);
+
+        Test test1 = new Test("kim");
+        System.out.println(test1.name);
+
+        Test test2 = new Test("park");
+        System.out.println(test2.name);
+	}
+```
+> 출력
+>
+> kim<br>
+> park
+
+저런식으로 test1, test2각각의 변수에 클래스를 복사하면서, 이름을 다르게 주면 됨.
+
+# 객체지향
+1. class 만들고
+2. object 만들고
+3. constructor 쓰는거
